[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/input_display/ui_stick.png" type="Texture" id=1]
[ext_resource path="res://ui/input_display/ui_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/input_display/input_display.gd" type="Script" id=3]
[ext_resource path="res://ui/input_display/ui_stick_base.png" type="Texture" id=4]
[ext_resource path="res://ui/input_display/ui_button_base.png" type="Texture" id=5]

[node name="InputDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -96.0
margin_right = 288.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
margin_right = 576.0
margin_bottom = 192.0
color = Color( 0.5, 0.5, 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StickContainer" type="Node2D" parent="Control"]
position = Vector2( 78, 104 )

[node name="StickBase2" type="Sprite" parent="Control/StickContainer"]
modulate = Color( 0.65, 0.65, 0.65, 0.5 )
texture = ExtResource( 5 )

[node name="StickBase" type="Sprite" parent="Control/StickContainer"]
visible = false
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Stick" type="Sprite" parent="Control/StickContainer"]
modulate = Color( 0.792157, 1, 0.537255, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="UIButton6" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 216, 136 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" parent="Control/UIButton6" index="1"]
modulate = Color( 0.541176, 0.788235, 0.988235, 1 )

[node name="Label" parent="Control/UIButton6" index="2"]
margin_left = -24.6667
margin_top = -25.3334
margin_right = -11.6667
margin_bottom = -11.3334
text = "G"

[node name="UIButton8" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 296, 136 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" parent="Control/UIButton8" index="1"]
modulate = Color( 1, 0.964706, 0.576471, 1 )

[node name="Label" parent="Control/UIButton8" index="2"]
margin_left = -23.3334
margin_top = -26.6667
margin_right = -10.3334
margin_bottom = -12.6667
text = "X"

[node name="UIButton4" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 256, 56 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" parent="Control/UIButton4" index="1"]
modulate = Color( 1, 0.545098, 0.8, 1 )

[node name="Label" parent="Control/UIButton4" index="2"]
margin_top = -26.6667
margin_bottom = -12.6667

[node name="UIButton5" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 336, 56 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" parent="Control/UIButton5" index="1"]
modulate = Color( 0.976471, 0.45098, 0.498039, 1 )

[node name="Label" parent="Control/UIButton5" index="2"]
margin_left = -24.6667
margin_top = -25.3333
margin_right = -11.6667
margin_bottom = -11.3333
text = "B"

[node name="UIButton7" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 416, 56 )
scale = Vector2( 0.75, 0.75 )

[node name="Button" parent="Control/UIButton7" index="1"]
modulate = Color( 0.67451, 0.945098, 0.627451, 1 )

[node name="Label" parent="Control/UIButton7" index="2"]
margin_left = -24.6666
margin_top = -26.6667
margin_right = -11.6666
margin_bottom = -12.6667
text = "C"

[node name="UIButton12" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 504, 96 )
scale = Vector2( 0.75, 0.75 )

[node name="Label" parent="Control/UIButton12" index="2"]
margin_left = -20.6671
margin_top = -25.3334
margin_right = -8.66711
margin_bottom = -11.3334
text = "S"

[editable path="Control/UIButton6"]

[editable path="Control/UIButton8"]

[editable path="Control/UIButton4"]

[editable path="Control/UIButton5"]

[editable path="Control/UIButton7"]

[editable path="Control/UIButton12"]
